--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
 			<version>3.5</version>
 		</dependency>
 
+		<dependency>
+		    <groupId>joda-time</groupId>
+		    <artifactId>joda-time</artifactId>
+		    <version>2.9.9</version>
+		</dependency>
+
 		<!-- Log4j -->
 		<dependency>
 			<groupId>log4j</groupId>
